fixed images in portfolio. Added image for header. Fixed some color contrast issues

--- a/start/scss/_portfolio.scss
+++ b/start/scss/_portfolio.scss
@@ -57,6 +57,10 @@
         @include serif-font;
       }
     }
+    .portfolio-img {
+      height: 5rem;
+      width: 5rem;
+    }
   }
   * {
     z-index: 2;
